Change z-index of cm-modal & cm-dropdown to prevent Material UI compatiility issues

--- a/src/components/cm-dropdown/cm-dropdown.scss
+++ b/src/components/cm-dropdown/cm-dropdown.scss
@@ -1,7 +1,7 @@
 :host {
 	display: inline-grid;
 	position: relative;
-	z-index: 100;
+	z-index: 998;
 }
 
 .container {
